--- a/proyecto.html
+++ b/proyecto.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Simulador de Compras</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
-    <h1></h1>
+  <div class="container">
+    <h1>Simulador de Compras</h1>
+    
+    <div id="productos"></div>
+
+    <div class="carrito">
+      <h2>Carrito</h2>
+      <ul id="lista-carrito"></ul>
+      <p><strong>Total:</strong> $<span id="total">0</span></p>
+      <button id="vaciar">Vaciar Carrito</button>
+      <button id="comprar">Finalizar Compra</button>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
